[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/assets/RetroTextTheme.tres" type="Theme" id=1]
[ext_resource path="res://src/views/PlayMenu.gd" type="Script" id=2]
[ext_resource path="res://src/views/Button.tscn" type="PackedScene" id=3]

[node name="PlayMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.15
anchor_top = 0.15
anchor_right = 0.15
anchor_bottom = 0.15
margin_right = 133.0
margin_bottom = 26.0
rect_scale = Vector2( 5, 5 )
text = "GAME NAME"

[node name="Buttons" type="VBoxContainer" parent="Panel"]
anchor_left = 0.43
anchor_top = 0.5
anchor_right = 0.45
anchor_bottom = 0.5
margin_right = 79.52
margin_bottom = 130.0
custom_constants/separation = 50

[node name="Host" parent="Panel/Buttons" instance=ExtResource( 3 )]
text = "Host"

[node name="Join" parent="Panel/Buttons" instance=ExtResource( 3 )]
margin_top = 90.0
margin_bottom = 130.0
text = "Join"

[node name="Lobby" type="Panel" parent="Panel"]
anchor_left = 0.11
anchor_top = 0.5
anchor_right = 0.21
anchor_bottom = 0.5
margin_right = 697.6
margin_bottom = 250.0
rect_min_size = Vector2( 800, 250 )

[node name="Waiting" type="Label" parent="Panel/Lobby"]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.1
anchor_bottom = 0.1
margin_right = 40.0
margin_bottom = 26.0
text = "Waiting for players..."

[node name="Connected" type="Label" parent="Panel/Lobby"]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.1
anchor_bottom = 0.1
margin_top = 40.0
margin_right = 86.0
margin_bottom = 66.0
text = "0 in match"

[node name="Names" type="Label" parent="Panel/Lobby"]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.1
anchor_bottom = 0.1
margin_top = 80.0
margin_right = 89.0
margin_bottom = 106.0
text = "..."

[node name="Play" parent="Panel/Lobby" instance=ExtResource( 3 )]
anchor_left = 0.8
anchor_top = 0.75
anchor_right = 0.8
anchor_bottom = 0.75
text = "Play"

[node name="Back" parent="Panel/Lobby" instance=ExtResource( 3 )]
anchor_left = 0.05
anchor_top = 0.75
anchor_right = 0.05
anchor_bottom = 0.75
text = "Leave"

[connection signal="clicked" from="Panel/Buttons/Host" to="." method="_on_Host_clicked"]
[connection signal="clicked" from="Panel/Buttons/Join" to="." method="_on_Join_clicked"]
[connection signal="clicked" from="Panel/Lobby/Play" to="." method="_on_Play_clicked"]
[connection signal="clicked" from="Panel/Lobby/Back" to="." method="_on_Back_clicked"]
